--- a/src/templates/components/_header.html
+++ b/src/templates/components/_header.html
@@ -42,6 +42,8 @@
           </ul>
 
           <button class="menu__btn">
+            <span>Меню</span>
+
             <svg class="menu__icon">
               <use xlink:href="images/sprite.svg#menu"></use>
             </svg>
