--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -10,6 +10,7 @@
     grid-gap: 30px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    margin-bottom: 30px;
     @include mq("768") {
       display: flex;
       flex-direction: column;
