--- a/src/scss/pages/author.scss
+++ b/src/scss/pages/author.scss
@@ -16,6 +16,15 @@
     justify-content: space-evenly;
     margin-bottom: 30px;
     padding: 0 50px;
+    @include mq("1024") {
+      padding: 0 20px;
+    }
+    @include mq("1024") {
+      padding: 0;
+    }
+    @include mq("768") {
+      flex-direction: column;
+    }
   }
 
   &__img {
@@ -24,6 +33,20 @@
     width: 380px;
     height: 380px;
     border-radius: 50%;
+    @include mq("1024") {
+      max-width: 50vw;
+      max-height: 100vh;
+    }
+    @include mq("768") {
+      min-height: 50vh;
+      min-width: 50%;
+      max-width: 100vw;
+      margin-bottom: 14px;
+    }
+    @include mq("480") {
+      height: 260px;
+      width: 260px;
+    }
   }
 
   &__body {
@@ -32,11 +55,18 @@
 
   &__name {
     margin-bottom: 10px;
+    @include mq("768") {
+      margin-bottom: 0;
+      text-align: center;
+    }
   }
 
   &__year {
     display: block;
     margin-bottom: 15px;
+    @include mq("768") {
+      text-align: center;
+    }
   }
 
   &__block {
@@ -48,12 +78,15 @@
     position: relative;
     font-family: "Lato", sans-serif;
     background-image: $bg;
+    @include mq("1024") {
+      padding: 10px;
+    }
 
     &:before {
       content: "\1F676";
       position: absolute;
       z-index: 2;
-      left: 30px;
+      left: 26px;
       top: 15px;
       width: 60px;
       height: 60px;
@@ -63,6 +96,10 @@
       color: #f5e9cf;
       font-size: 50px;
       background: rgba(188, 231, 250, 0.7);
+      @include mq("1024") {
+        top: -20px;
+        left: -38px;
+      }
     }
 
     &:after {
@@ -74,6 +111,10 @@
       height: 60px;
       border-radius: 50%;
       background: rgba(242, 124, 176, 0.7);
+      @include mq("1024") {
+        top: -12px;
+        left: -34px;
+      }
     }
 
     p {
@@ -82,18 +123,25 @@
       font-size: 18px;
       letter-spacing: 0.05em;
       line-height: 1.4;
-      margin: 0 0 16px;
       color: $accent;
-      @include txt(3);
+      @include txt(4);
+      @include mq("1024") {
+        // display: contents;
+        font-size: 14px;
+        @include txt(6);
+      }
     }
   }
 
   &__content {
     display: flex;
-    justify-content: end;
+    justify-content: center;
     flex-wrap: wrap;
     margin: 15px 20px;
     list-style: decimal;
+    @include mq("768") {
+      padding: 0 0 0 20%;
+    }
   }
 
   &__item {
@@ -118,7 +166,10 @@
       transform: translateX(-2px);
       color: $accent;
     }
-    @include txt(3);
+    @include txt(6);
+    @include mq("480"){
+      margin-left: -4px;
+    }
     @extend %pt-700i;
   }
 }
