--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,5 +13,6 @@
 @import "components/news";
 @import "pages/product";
 @import "pages/author";
+@import "components/comments";
 @import "components/modal";
 @import "components/footer";
