--- a/src/templates/pages/history.html
+++ b/src/templates/pages/history.html
@@ -15,8 +15,8 @@
     <div class="wrapper">
       @@loop('templates/components/_header.html',[{ "title":"header title" }])
       <main class="main">
-
-
+        <!-- Поиск и ссылки для связи. -->
+        @@include('templates/components/_bar.html')
 
         <button class="up">
           <svg class="up__icon">
@@ -24,8 +24,7 @@
           </svg>
         </button>
       </main>
-      @@include('templates/components/_modal.html')
-      @@include('templates/components/_footer.html')
+      @@include('templates/components/_modal.html') @@include('templates/components/_footer.html')
     </div>
     <script src="js/product.min.js"></script>
   </body>
