--- a/src/templates/pages/product.html
+++ b/src/templates/pages/product.html
@@ -15,6 +15,9 @@
     <div class="wrapper">
       @@loop('templates/components/_header.html',[{ "title":"header title" }])
       <main class="main">
+        <!-- Поиск и ссылки для связи. -->
+        @@include('templates/components/_bar.html')
+
         <section class="product">
           <div class="container">
             <article class="product__wrapper" data-aos="slide-up" data-aos-duration="1000">
@@ -22,7 +25,7 @@
                 <h2 class="product__title">Добро пожаловать на сайт "Взлет.ру"!</h2>
 
                 <p class="product__text" data-aos="fade-in" data-aos-duration="1000">
-                  <img src="/images/content/2.jpg" alt="Изображение" class="product__img" data-aos="fade-in" data-aos-duration="1000"/>
+                  <img src="/images/content/2.jpg" alt="Изображение" class="product__img" data-aos="fade-in" data-aos-duration="1000" />
                   Дорогие друзья! Теперь и у нашего выпуска Харьковского ВВАУЛ 1974 года есть свой сайт. Заходите, регистрируйтесь, смотрите материалы, присылайте свои мысли,
                   воспоминания, стихи, рассказы, пожелания, замечания , восхищения и, конечно же, фотографии – то есть всё то, чем вы хотите поделиться со своими однокашниками.
                   Именно это сделает наш сайт красивым и, возможно, посещаемым другими пользователями. Цель сайта: собрать как можно больше информации о всех выпускниках ХВВАУЛ,
@@ -68,6 +71,8 @@
             </article>
           </div>
         </section>
+        <!--  коментарии -->
+        @@include('templates/components/_comments.html')
 
         <button class="up">
           <svg class="up__icon">
@@ -75,8 +80,7 @@
           </svg>
         </button>
       </main>
-      @@include('templates/components/_modal.html')
-      @@include('templates/components/_footer.html')
+      @@include('templates/components/_modal.html') @@include('templates/components/_footer.html')
     </div>
     <script src="js/product.min.js"></script>
   </body>
