--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -297,9 +297,10 @@
             </svg>
           </button>
         </div>
+        @@include('templates/components/_modal.html')
       </main>
 
-      @@include('templates/components/_modal.html') @@include('templates/components/_footer.html')
+      @@include('templates/components/_footer.html')
     </div>
     <script src="js/main.min.js"></script>
   </body>
