--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -11,6 +11,7 @@ html {
 }
 
 body {
+  user-select: none;
   font-size: 16px;
   line-height: 1.5;
   color: #000;
@@ -82,8 +83,8 @@ span {
 .up {
   position: fixed;
   right: 30px;
-  bottom: 30px;
-  z-index: 999;
+  bottom: 100px;
+  z-index: 9;
   display: none;
   width: 32px;
   height: 32px;
@@ -103,4 +104,28 @@ span {
   max-height: 40px;
   fill: #000;
   background-color: #e5f4f3;
+}
+
+.created {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  @include mq("480") {
+    font-size: 10px;
+  }
+
+  &__icon {
+    width: 28px;
+    height: 28px;
+    @include mq("480") {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  &__link {
+    margin-left: 6px;
+    color: #fff;
+  }
 }
