--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,15 +1,38 @@
 .footer {
-  max-height: 60px;
   background-color: $accent;
+  // z-index: 10;
 
-  &__inner{
+  &__inner {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #fff;
     min-height: 60px;
   }
 
-  &__copy{
+  &__txt {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+    margin-left: 18px;
+    list-style-type: disc;
+    @include mq("768") {
+      font-size: 14px;
+    }
+  }
+
+  &__copy {
     color: #fff;
+    @include mq("480") {
+      font-size: 10px;
+    }
+  }
+
+  & .social__icon {
+    border-radius: 50%;
+    background-color: #fff;
+
+    overflow: hidden;
   }
 }
