--- a/src/scss/pages/author.scss
+++ b/src/scss/pages/author.scss
@@ -4,7 +4,7 @@
   &__container {
     border: 4px solid $accent;
     max-width: 1300px;
-    margin: 25px auto;
+    margin: 0 auto 48px;
     padding: 25px;
     border-radius: 12px;
     background-color: #fff;
