--- a/src/templates/components/_bar.html
+++ b/src/templates/components/_bar.html
@@ -3,21 +3,21 @@
               <!-- <span class="social_text">Свяжитесь со мной:</span> -->
               <ul class="social__list">
                 <li class="social__item">
-                  <a href="./product.html" target="_blank" class="social__link">
+                  <a href="https://ok.ru/profile/529378520930" target="_blank" class="social__link">
                     <svg class="social__icon">
                       <use xlink:href="images/sprite.svg#odnok"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="./product.html" target="_blank" class="social__link">
+                  <a href="https://telegram.me/v3letRu" target="_blank" class="social__link">
                     <svg class="social__icon">
                       <use xlink:href="images/sprite.svg#telegram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="./product.html" target="_blank" class="social__link">
+                  <a href="mailto:admin@v3let.ru" class="social__link">
                     <svg class="social__icon">
                       <use xlink:href="images/sprite.svg#email"></use>
                     </svg>
