--- a/src/templates/pages/history.html
+++ b/src/templates/pages/history.html
@@ -23,8 +23,9 @@
             <use xlink:href="images/sprite.svg#up"></use>
           </svg>
         </button>
+        @@include('templates/components/_modal.html')
       </main>
-      @@include('templates/components/_modal.html') @@include('templates/components/_footer.html')
+      @@loop('templates/components/_footer.html')
     </div>
     <script src="js/product.min.js"></script>
   </body>
