--- a/src/templates/pages/product.html
+++ b/src/templates/pages/product.html
@@ -16,7 +16,9 @@
       @@loop('templates/components/_header.html',[{ "title":"header title" }])
       <main class="main">
         <!-- Поиск и ссылки для связи. -->
-        @@include('templates/components/_bar.html')
+        <div class="container">
+          @@include('templates/components/_bar.html')
+          </div">
 
         <section class="product">
           <div class="container">
@@ -79,8 +81,9 @@
             <use xlink:href="images/sprite.svg#up"></use>
           </svg>
         </button>
+        @@include('templates/components/_modal.html')
       </main>
-      @@include('templates/components/_modal.html') @@include('templates/components/_footer.html')
+       @@include('templates/components/_footer.html')
     </div>
     <script src="js/product.min.js"></script>
   </body>
