--- a/src/templates/pages/art.html
+++ b/src/templates/pages/art.html
@@ -16,7 +16,7 @@
       @@loop('templates/components/_header.html',[{ "title":"header title" }])
       <main class="main">
         <!-- Поиск и ссылки для связи. -->
-        @@include('templates/components/_bar.html')
+        <div class="container">@@include('templates/components/_bar.html')</div>
 
         <button class="up">
           <svg class="up__icon">
