--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -18,7 +18,7 @@
       <main class="main" data-aos="slide-up">
         <div class="container">
           <!-- Поиск и ссылки для связи. -->
-          @@loop('templates/components/_bar.html')
+          @@include('templates/components/_bar.html')
 
           <!-- Истории. -->
           <section class="content">
