--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -40,7 +40,7 @@ body {
 .title {
   position: relative;
   border-bottom: 1px solid #000;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   text-align: center;
   @include txt($lc: 2);
 }
@@ -48,6 +48,7 @@ body {
 h1 {
   font-size: 36px;
   margin-bottom: -10px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
   @include mq("1024") {
     font-size: 32px;
   }
@@ -58,7 +59,9 @@ h1 {
 
 h2 {
   font-size: 24px;
+  font-style: italic;
   line-height: 29px;
+  text-shadow: 1px 0 0 rgba(0, 0, 0, 0.8);
   @include mq("768") {
     font-size: 22px;
   }
