--- a/src/scss/pages/author.scss
+++ b/src/scss/pages/author.scss
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin-bottom: 30px;
+    margin: 50px 0;
     padding: 0 50px;
     @include mq("1024") {
       padding: 0 20px;
@@ -33,6 +33,7 @@
     width: 380px;
     height: 380px;
     border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     @include mq("1024") {
       max-width: 50vw;
       max-height: 100vh;
@@ -55,6 +56,7 @@
 
   &__name {
     margin-bottom: 10px;
+    text-align: center;
     @include mq("768") {
       margin-bottom: 0;
       text-align: center;
@@ -64,72 +66,97 @@
   &__year {
     display: block;
     margin-bottom: 15px;
+    text-align: center;
     @include mq("768") {
       text-align: center;
     }
   }
 
   &__block {
-    border-radius: 0 20px 20px 0;
-    margin: 0;
-    background: #eaeaea;
-    color: $accent;
-    padding: 30px 30px 30px 80px;
+    border-left: 6px solid #bfe2ff;
+    font-size: 16px;
+    font-style: italic;
+    margin: 16px;
+    padding: 16px 24px;
     position: relative;
-    font-family: "Lato", sans-serif;
-    background-image: $bg;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     @include mq("1024") {
       padding: 10px;
     }
 
     &:before {
-      content: "\1F676";
+      content: "";
       position: absolute;
-      z-index: 2;
-      left: 26px;
-      top: 15px;
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 80px;
-      color: #f5e9cf;
-      font-size: 50px;
-      background: rgba(188, 231, 250, 0.7);
-      @include mq("1024") {
-        top: -20px;
-        left: -38px;
-      }
+      top: 40%;
+      left: -6px;
+      height: 40px;
+      background-color: #fff;
+      width: 6px;
+      margin-top: -1em;
     }
 
     &:after {
-      content: "";
+      content: "”";
       position: absolute;
-      left: 34px;
-      top: 19px;
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      background: rgba(242, 124, 176, 0.7);
-      @include mq("1024") {
-        top: -12px;
-        left: -34px;
-      }
+      top: 40%;
+      left: -20px;
+      color: #337ab7;
+      font-size: 50px;
+      font-family: Times, sans-serif;
+      font-weight: bold;
+      line-height: 30px;
     }
 
     p {
       position: relative;
       z-index: 3;
+      margin-left: 10px;
       font-size: 18px;
       letter-spacing: 0.05em;
       line-height: 1.4;
-      color: $accent;
+      color: #000;
       @include txt(4);
       @include mq("1024") {
         // display: contents;
         font-size: 14px;
         @include txt(6);
       }
+    }
+
+    cite {
+      color: #337ab7;
+      font-size: 15px;
+      padding-top: 10px;
+      display: block;
+      text-align: right;
+      @include mq("480") {
+        font-size: 12px;
+      }
+    }
+  }
+
+  &__social {
+    margin: 10px 0;
+
+    &-link {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #000;
+      cursor: pointer;
+      @extend %pt-700;
+
+      & span {
+        transition: color 0.4s;
+
+        &:hover {
+          color: $accent;
+        }
+      }
+    }
+
+    & svg {
+      margin-right: 6px;
     }
   }
 
@@ -138,9 +165,12 @@
     justify-content: center;
     flex-wrap: wrap;
     margin: 15px 20px;
+    border-radius: 8px;
     list-style: decimal;
+    padding: 50px 0 30px 12%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     @include mq("768") {
-      padding: 0 0 0 20%;
+      padding: 20px 0 20px 20%;
     }
   }
 
@@ -163,11 +193,11 @@
     transition: color 0.3s, transform 0.4s;
 
     &:hover {
-      transform: translateX(-2px);
+      transform: translateX(2px);
       color: $accent;
     }
     @include txt(6);
-    @include mq("480"){
+    @include mq("480") {
       margin-left: -4px;
     }
     @extend %pt-700i;
