--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -2,21 +2,23 @@
   &__content {
     // margin: 45px 0;
     padding: 25px 0;
-    border-radius: 12px 12px 0 0;
+    border: 4px solid $accent;
+    border-radius: 12px;
     background-color: #fff;
   }
 
   &__title{
     margin: 0 20px;
     text-align: center;
+    text-shadow: 1px 0 0 rgba(0, 0, 0, 0.8);
   }
 
   &__text {
-    float: left;
     border-radius: 12px;
     margin: 15px 15px 25px 0;
     padding: 25px;
     min-width: 100%;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
     background-color: #fff;
   }
 
@@ -28,6 +30,7 @@
     max-width: 50vw;
     min-height: 35vw;
     max-height: 36vw;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     @include mq("768"){
       float: none;
       margin-bottom: 16px;
