--- a/src/templates/pages/history.html
+++ b/src/templates/pages/history.html
@@ -16,7 +16,7 @@
       @@loop('templates/components/_header.html',[{ "title":"header title" }])
       <main class="main">
         <!-- Поиск и ссылки для связи. -->
-        @@include('templates/components/_bar.html')
+        <div class="container">@@include('templates/components/_bar.html')</div>
 
         <button class="up">
           <svg class="up__icon">
@@ -25,7 +25,7 @@
         </button>
         @@include('templates/components/_modal.html')
       </main>
-      @@loop('templates/components/_footer.html')
+      @@include('templates/components/_footer.html')
     </div>
     <script src="js/product.min.js"></script>
   </body>
