--- a/src/templates/components/_header.html
+++ b/src/templates/components/_header.html
@@ -12,44 +12,57 @@
   </div>
 
   <div class="container">
-    <div class="header__body">
-      <div class="header__inner">
-        <div class="header__about" data-aos="fade-left" data-aos-duration="1000">
-          <h1 class="header__title">
-            <a href="/" class="header__link">Взлёт</a>
-          </h1>
+    <div class="header__inner">
+      <div class="header__about" data-aos="fade-left" data-aos-duration="1000">
+        <h1 class="header__title">
+          <a href="/" class="header__link">Взлёт</a>
+        </h1>
 
-          <span class="header__subtitle"> Сайт выпускников 1974 года </span>
-        </div>
-
-        <nav class="menu">
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a href="./index.html#slide" class="menu__link">Наш курс</a>
-            </li>
-            <li class="menu__item">
-              <a href="./history.html" class="menu__link">Исторические хроники</a>
-            </li>
-            <li class="menu__item">
-              <a href="./art.html" class="menu__link">Творчество</a>
-            </li>
-            <li class="menu__item">
-              <a href="./author.html" class="menu__link">Юрий Фёдоров</a>
-            </li>
-            <li class="menu__item">
-              <a href="#" class="menu__link" data-modal="data-modal">Помощь</a>
-            </li>
-          </ul>
-
-          <button class="menu__btn">
-            <span>Меню</span>
-
-            <svg class="menu__icon">
-              <use xlink:href="images/sprite.svg#menu"></use>
-            </svg>
-          </button>
-        </nav>
+        <span class="header__subtitle"> Сайт выпускников 1974 года </span>
       </div>
+
+      <nav class="menu">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <svg class="menu__pic">
+              <use xlink:href="images/sprite.svg#users"></use>
+            </svg>
+            <a href="./index.html#slide" class="menu__link">Наш курс</a>
+          </li>
+          <li class="menu__item">
+            <svg class="menu__pic">
+              <use xlink:href="images/sprite.svg#history"></use>
+            </svg>
+            <a href="./history.html" class="menu__link">Исторические хроники</a>
+          </li>
+          <li class="menu__item">
+            <svg class="menu__pic">
+              <use xlink:href="images/sprite.svg#art"></use>
+            </svg>
+            <a href="./art.html" class="menu__link">Творчество</a>
+          </li>
+          <li class="menu__item">
+            <svg class="menu__pic">
+              <use xlink:href="images/sprite.svg#author"></use>
+            </svg>
+            <a href="./author.html" class="menu__link">Юрий Фёдоров</a>
+          </li>
+          <li class="menu__item">
+            <svg class="menu__pic">
+              <use xlink:href="images/sprite.svg#help"></use>
+            </svg>
+            <a href="#" class="menu__link" data-modal="data-modal">Помощь</a>
+          </li>
+        </ul>
+
+        <button class="menu__btn">
+          <span>Меню</span>
+
+          <svg class="menu__icon">
+            <use xlink:href="images/sprite.svg#menu"></use>
+          </svg>
+        </button>
+      </nav>
     </div>
   </div>
 
