--- a/src/templates/pages/history.html
+++ b/src/templates/pages/history.html
@@ -24,6 +24,7 @@
           </svg>
         </button>
         @@include('templates/components/_modal.html')
+        @@include('templates/components/_up.html')
       </main>
       @@include('templates/components/_footer.html')
     </div>
