--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -28,7 +28,7 @@ body {
 
 .main {
   flex-grow: 1;
-  margin-top: 150px;
+  margin-top: 140px;
 }
 
 .container {
@@ -39,10 +39,30 @@ body {
 
 .title {
   position: relative;
-  border-bottom: 1px solid #000;
-  margin-bottom: 50px;
-  text-align: center;
+  margin-bottom: 2rem;
+  padding-bottom: 0.5rem;
+  color: $title;
   @include txt($lc: 2);
+
+  &:before {
+    content: "";
+    position: absolute;
+    border-bottom: 2px solid $title;
+    bottom: 0.25rem;
+    left: 0;
+    width: 40%;
+    transform: translateX(-50%);
+  }
+
+  &:after {
+    content: "";
+    position: absolute;
+    border-bottom: 2px solid $title;
+    bottom: 0;
+    left: 0;
+    width: 20%;
+    transform: translateX(-50%);
+  }
 }
 
 h1 {
@@ -62,9 +82,6 @@ h2 {
   font-style: italic;
   line-height: 29px;
   text-shadow: 1px 0 0 rgba(0, 0, 0, 0.8);
-  @include mq("768") {
-    font-size: 22px;
-  }
 }
 
 h1,
@@ -83,15 +100,36 @@ span {
 }
 
 // кноака наверх
+.up-wrapper {
+  position: relative;
+  margin: 0 auto;
+  max-width: 1300px;
+}
+
 .up {
-  position: fixed;
-  right: 30px;
-  bottom: 100px;
+  position: absolute;
+  right: 40px;
+  bottom: 40px;
   z-index: 9;
-  display: none;
   width: 32px;
   height: 32px;
   cursor: pointer;
+
+  &__txt {
+    position: absolute;
+    top: 36px;
+    font-size: 12px;
+    // transform: rotate(90deg);
+    @extend %pt-700;
+  }
+
+  &__icon {
+    border-radius: 50%;
+    max-width: 40px;
+    max-height: 40px;
+    fill: #000;
+    background-color: #e5f4f3;
+  }
 
   &--animated {
     animation-name: "up";
@@ -99,14 +137,6 @@ span {
     animation-timing-function: ease;
     animation-iteration-count: infinite;
   }
-}
-
-.up__icon {
-  border-radius: 50%;
-  max-width: 40px;
-  max-height: 40px;
-  fill: #000;
-  background-color: #e5f4f3;
 }
 
 .created {
