--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -21,6 +21,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    box-shadow: rgba(0,0,0,.4) 0 2px 4px, rgba(0,0,0,.3) 0 7px 13px -3px, rgba(0,0,0,.2) 0 -3px 0 inset;
     padding: 12px;
     border-radius: 6px;
     background-image: $bg;
