--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -7,7 +7,6 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
 
   &__title {
     display: block;
@@ -22,16 +21,18 @@
   &__dialog {
     margin: 100px auto;
     max-width: 700px;
+
   }
 
   &__content {
     position: relative;
     overflow-y: auto;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 4px solid $accent;
     border-radius: 20px;
     padding: 40px;
     width: 100%;
     max-height: 90vh;
+    box-shadow: rgba(0, 0, 0, 0.76) 0px 22px 70px 4px;
     background-color: #fff;
   }
 
