--- a/src/scss/components/_news.scss
+++ b/src/scss/components/_news.scss
@@ -10,6 +10,7 @@
   }
 
   &__item {
+    box-shadow: rgba(0,0,0,.4) 0 2px 4px, rgba(0,0,0,.3) 0 7px 13px -3px, rgba(0,0,0,.2) 0 -3px 0 inset;
     &:not(:last-child) {
       margin-bottom: 25px;
     }
