--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -1,6 +1,5 @@
 .product {
   &__content {
-    // margin: 45px 0;
     padding: 25px 0;
     border: 4px solid $accent;
     border-radius: 12px;
@@ -15,7 +14,7 @@
 
   &__text {
     border-radius: 12px;
-    margin: 15px 15px 25px 0;
+    margin: 15px 15px 0 0;
     padding: 25px;
     min-width: 100%;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
