--- a/src/templates/pages/author.html
+++ b/src/templates/pages/author.html
@@ -688,11 +688,7 @@
           </div>
         </section>
 
-        <button class="up">
-          <svg class="up__icon">
-            <use xlink:href="images/sprite.svg#up"></use>
-          </svg>
-        </button>
+        @@include('templates/components/_up.html')
       </main>
       @@include('templates/components/_modal.html') @@include('templates/components/_footer.html')
     </div>
