--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="ХВВАУЛ,Харьковское ВВАУЛ,Харьковское высшее военное авиационное училище лётчиков,выпускники 1974 года,выпуск 1974 года, лучший сайт авиации" />
     <meta name="description" content="Сайт выпускников ХВВАУЛ 1974 года выпуска, ХВВАУЛ-74, Взлёт.ру, v3let.ru, лучший сайт авиации" />
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="image/x-icon" rel="shortcut icon" href="images/favicon.ico" />
 
@@ -29,7 +30,7 @@
                 <a href="./product.html" target="_blank" class="content__link"></a>
 
                 <div class="content__img-container">
-                  <img src="images/content/1.jpg" alt="Изображение статьи" class="content__img" />
+                  <img data-src="images/content/1.jpg" src="images/1x1.png" alt="Изображение статьи" class="content__img lazy" />
                 </div>
 
                 <h3 class="content__title">ЛЕЙТЕНАНТСКИЕ ГОДЫ</h3>
@@ -47,7 +48,7 @@
                 <a href="./product.html" target="_blank" class="content__link"></a>
 
                 <div class="content__img-container">
-                  <img src="images/content/2.jpg" alt="Изображение статьи" class="content__img" />
+                  <img data-src="images/content/2.jpg" src="images/1x1.png" alt="Изображение статьи" class="content__img lazy" />
                 </div>
 
                 <h3 class="content__title">«НЕПОДСУДЕН-4»</h3>
@@ -65,7 +66,7 @@
                 <a href="./product.html" target="_blank" class="content__link"></a>
 
                 <div class="content__img-container">
-                  <img src="images/content/3.jpg" alt="Изображение статьи" class="content__img" />
+                  <img data-src="images/content/3.jpg" src="images/1x1.png" alt="Изображение статьи" class="content__img lazy" />
                 </div>
 
                 <h3 class="content__title">СЛУЖЕБНОЕ ПРЕСТУПЛЕНИЕ</h3>
@@ -83,7 +84,7 @@
                 <a href="./product.html" target="_blank" class="content__link"></a>
 
                 <div class="content__img-container">
-                  <img src="images/content/4.jpg" alt="Изображение статьи" class="content__img" />
+                  <img data-src="images/content/4.jpg" src="images/1x1.png" alt="Изображение статьи" class="content__img lazy" />
                 </div>
 
                 <h3 class="content__title">ЛЕЙТЕНАНТСКИЕ ГОДЫ</h3>
@@ -101,7 +102,7 @@
                 <a href="./product.html" target="_blank" class="content__link"></a>
 
                 <div class="content__img-container">
-                  <img src="images/content/5.jpg" alt="Изображение статьи" class="content__img" />
+                  <img data-src="images/content/5.jpg" src="images/1x1.png" alt="Изображение статьи" class="content__img lazy" />
                 </div>
 
                 <h3 class="content__title">ЗАКОНОМЕРНЫЙ ИТОГ</h3>
@@ -130,42 +131,42 @@
               <ul class="slider__list swiper-wrapper">
                 <li class="slider__item swiper-slide">
                   <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img src="images/slider/1.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <img data-src="images/slider/1.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
                     <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
                   <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img src="images/slider/2.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <img data-src="images/slider/2.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
                     <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
                   <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img src="images/slider/3.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <img data-src="images/slider/3.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
                     <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
                   <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img src="images/slider/4.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <img data-src="images/slider/4.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
                     <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
                   <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img src="images/slider/5.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <img data-src="images/slider/5.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
                     <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
                   <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img src="images/slider/6.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <img data-src="images/slider/6.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
                     <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
@@ -182,7 +183,7 @@
                 <li class="news__item">
                   <article class="news__element" data-aos="slide-up">
                     <a href="./product.html" target="_blank" class="news__link"></a>
-                    <img src="images/news/1.jpg" alt="Новостная карточка" class="news__image" />
+                    <img data-src="images/news/1.jpg" alt="Новостная карточка" class="news__image lazy" />
 
                     <div class="news__info">
                       <h3 class="news__title">БУДУЩЕЕ – ЗАВТРА</h3>
@@ -203,7 +204,7 @@
                 <li class="news__item">
                   <article class="news__element" data-aos="slide-up">
                     <a href="./product.html" target="_blank" class="news__link"></a>
-                    <img src="images/news/2.jpg" alt="Новостная карточка" class="news__image" />
+                    <img data-src="images/news/2.jpg" alt="Новостная карточка" class="news__image lazy" />
 
                     <div class="news__info">
                       <h3 class="news__title">ЭТО НУЖНО НЕ МЁРТВЫМ, ЭТО НУЖНО ЖИВЫМ!</h3>
@@ -224,7 +225,7 @@
                 <li class="news__item">
                   <article class="news__element" data-aos="slide-up">
                     <a href="./product.html" target="_blank" class="news__link"></a>
-                    <img src="images/news/3.jpg" alt="Новостная карточка" class="news__image" />
+                    <img data-src="images/news/3.jpg" alt="Новостная карточка" class="news__image lazy" />
 
                     <div class="news__info">
                       <h3 class="news__title">НЕПЛАНОВАЯ ПОСАДКА</h3>
@@ -245,7 +246,7 @@
                 <li class="news__item">
                   <article class="news__element" data-aos="slide-up">
                     <a href="./product.html" target="_blank" class="news__link"></a>
-                    <img src="images/news/4.jpg" alt="Новостная карточка" class="news__image" />
+                    <img data-src="images/news/4.jpg" alt="Новостная карточка" class="news__image lazy" />
 
                     <div class="news__info">
                       <h3 class="news__title">НЛО ПРИЛЕТАЕТ ПО ЧЕТВЕРГАМ</h3>
@@ -266,7 +267,7 @@
                 <li class="news__item">
                   <article class="news__element">
                     <a href="./product.html" target="_blank" class="news__link"></a>
-                    <img src="images/news/5.jpg" alt="Новостная карточка" class="news__image" />
+                    <img data-src="images/news/5.jpg" alt="Новостная карточка" class="news__image lazy" />
 
                     <div class="news__info">
                       <h3 class="news__title">ВО ЧТО ВЕРИТ РП</h3>
