--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -37,6 +37,23 @@ body {
   max-width: 1330px;
 }
 
+img {
+  // position: absolute;
+  // top: 0;
+  // left: 0;
+  // width: 100%;
+  // height: 100%;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.loading {
+  position: relative;
+  top: 0;
+  left: 0;
+  background: url("../images/loading2.gif") center no-repeat;
+}
+
 .title {
   position: relative;
   margin-bottom: 2rem;
@@ -50,7 +67,7 @@ body {
     border-bottom: 2px solid $title;
     bottom: 0.25rem;
     left: 0;
-    width: 40%;
+    width: 70%;
     transform: translateX(-50%);
   }
 
@@ -60,28 +77,9 @@ body {
     border-bottom: 2px solid $title;
     bottom: 0;
     left: 0;
-    width: 20%;
+    width: 35%;
     transform: translateX(-50%);
   }
-}
-
-h1 {
-  font-size: 36px;
-  margin-bottom: -10px;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
-  @include mq("1024") {
-    font-size: 32px;
-  }
-  @include mq("768") {
-    font-size: 28px;
-  }
-}
-
-h2 {
-  font-size: 24px;
-  font-style: italic;
-  line-height: 29px;
-  text-shadow: 1px 0 0 rgba(0, 0, 0, 0.8);
 }
 
 h1,
@@ -90,8 +88,49 @@ h3,
 h4,
 h5,
 h6 {
+  margin: 0;
+  margin-bottom: 1.38rem;
+  line-height: 1.3;
+  letter-spacing: 1px;
   color: $title;
   @extend %pt-700;
+}
+
+h1 {
+  margin-bottom: 0;
+  font-size: 3.052rem;
+  line-height: 1;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
+  @include mq("768") {
+    font-size: 2.441rem;
+  }
+}
+
+h2 {
+  font-size: 2.441rem;
+  font-style: italic;
+  text-shadow: 1px 0 0 rgba(0, 0, 0, 0.8);
+  @include mq("768") {
+    font-size: 1.953rem;
+  }
+}
+
+h3 {
+  font-size: 1.953rem;
+  @include mq("768") {
+    font-size: 1.563rem;
+  }
+}
+
+h4 {
+  font-size: 1.563rem;
+  @include mq("768") {
+    font-size: 1.25rem;
+  }
+}
+
+h5 {
+  font-size: 1.25rem;
 }
 
 p,
