--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -11,6 +11,9 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     margin-bottom: 30px;
+    @include mq("1024") {
+      grid-gap: 20px;
+    }
     @include mq("768") {
       display: flex;
       flex-direction: column;
@@ -21,7 +24,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    box-shadow: rgba(0,0,0,.4) 0 2px 4px, rgba(0,0,0,.3) 0 7px 13px -3px, rgba(0,0,0,.2) 0 -3px 0 inset;
+    box-shadow: rgba(0, 0, 0, 0.4) 0 2px 4px, rgba(0, 0, 0, 0.3) 0 7px 13px -3px, rgba(0, 0, 0, 0.2) 0 -3px 0 inset;
     padding: 12px;
     border-radius: 6px;
     background-image: $bg;
@@ -58,7 +61,7 @@
 
     &:first-child .content__img {
       width: 100%;
-      height: 360px;
+      max-height: 360px;
       @include mq("1024") {
         height: 100%;
       }
@@ -87,7 +90,8 @@
 
   &__img {
     width: 278px;
-    height: 170px;
+    min-height: 170px;
+    max-height: 170px;
     margin-bottom: 12px;
     object-fit: cover;
     @include mq("1024") {
@@ -97,7 +101,9 @@
   }
 
   &__title {
+    flex-grow: 1;
     font-size: 18px;
+    margin-top: 10px;
     text-shadow: 1px 0 0 rgba(0, 0, 0, 0.8);
     @include txt($lc: 2);
     @include mq("1024") {
@@ -106,11 +112,12 @@
   }
 
   &__text {
-    flex-grow: 1;
     margin-bottom: 10px;
+    max-height: 100px;
     font-size: 12px;
     text-shadow: 1px 0 0 rgba(0, 0, 0, 0.8);
-    @include txt($lc: 2);
+    overflow: hidden;
+    @include txt($lc: 3);
   }
 
   &__date {
