--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,7 +4,7 @@
 @import "mixin";
 @import "fonts";
 @import "global";
-// @import "sprite";
+@import "sprite";
 @import "animations";
 @import "components/header";
 @import "components/bar";
