--- a/src/scss/components/_news.scss
+++ b/src/scss/components/_news.scss
@@ -38,7 +38,7 @@
     margin-right: 20px;
     max-width: 40%;
     min-width: 39%;
-    max-height: 100%;
+    max-height: 397px;
     object-fit: cover;
     @include mq("768") {
       min-width: 100%;
@@ -87,8 +87,8 @@
       content: "";
       position: absolute;
       display: block;
-      right: 84px;
-      bottom: 8px;
+      left: 4px;
+      bottom: 6px;
       border-radius: 50%;
       width: 8px;
       height: 8px;
