--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -17,6 +17,7 @@
     margin: 15px 15px 0 0;
     padding: 25px;
     min-width: 100%;
+    min-height: 600px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
     background-color: #fff;
   }
@@ -35,6 +36,18 @@
       margin-bottom: 16px;
       min-width: 100%;
       max-height: 50%;
+    }
+  }
+
+  &__info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+    & small {
+      font-size: 12px;
+      margin: 10px 16px;
     }
   }
 }
