--- a/src/templates/pages/product.html
+++ b/src/templates/pages/product.html
@@ -85,6 +85,6 @@
       </main>
        @@include('templates/components/_footer.html')
     </div>
-    <script src="js/product.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
