--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -67,7 +67,7 @@
     background-position: 146px -50px;
     background-repeat: no-repeat;
     background-size: 180px;
-    @include mq("480"){
+    @include mq("480") {
       background-position: 116px -50px;
     }
   }
@@ -128,7 +128,7 @@
         transform: translateX(0%);
       }
     }
-    @include mq("480"){
+    @include mq("480") {
       top: 56px;
       border-radius: 0 0 10px 10px;
       min-width: 100%;
@@ -191,6 +191,19 @@
     transition: color 0.4s, transform 0.4s;
     @include mq("1024") {
       color: #000;
+    }
+
+    span {
+      display: block;
+      font-size: 14px;
+      color: $title;
+      transition: color 0.4s, transform 0.4s;
+
+      &:hover {
+        transform: scale(0.95);
+        color: $accent;
+      }
+      @extend %pt-700i;
     }
 
     &:hover {
